# vs-copland

./: .gitignore  README.md  package.json  vs-copland-0.0.1.vsix
client/: package.json
client/src/: extension.ts
lsp-sample/: README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
lsp-sample/parser/: copland-lexer.js  grammar.js  grammar.ne  lexer-test.js  test.js
lsp-sample/server/: package.json  tsconfig.json  tsconfig.tsbuildinfo
lsp-sample/syntaxes/: copland.tmLanguage.json
lsp-sample/tree-sitter-copland/: Package.swift  grammar.js  index.d.ts  package.json  pyproject.toml  test.cop  (+1 more)
server/: package.json  tsconfig.json
syntaxes/: copland.tmLanguage.json
tree-sitter-copland/: CMakeLists.txt  Cargo.toml  Makefile  binding.gyp  go.mod  grammar.js  index.d.ts  index.js  setup.py  tree-sitter.json
tree-sitter-copland/bindings/c/tree_sitter/: tree-sitter-copland.h
tree-sitter-copland/bindings/go/: binding.go  binding_test.go
tree-sitter-copland/bindings/node/: binding.cc  index.js
tree-sitter-copland/bindings/python/tree_sitter_copland/: __init__.py  binding.c
tree-sitter-copland/bindings/rust/: build.rs  lib.rs
tree-sitter-copland/bindings/swift/TreeSitterCoplandTests/: TreeSitterCoplandTests.swift
tree-sitter-copland/src/: grammar.json  node-types.json  parser.c
tree-sitter-copland/test/corpus/: copy.txt  linear_seq.txt  measurement.txt  null.txt  symbol.txt
vs-copland/: CHANGELOG.md  README.md  language-configuration.json  package-lock.json  package.json  test.cop  testv2.cop  vsc-extension-quickstart.md
(+24 files in other folders)
